--- a/Characters/OphidianCharacters.tex
+++ b/Characters/OphidianCharacters.tex
@@ -774,6 +774,18 @@ He will reach his goal, no matter the cost.
 
 
 
+\subsubsection{Manipulation and ruthlessness}
+\Secherdamon was more calculating but less cruel than his brother \Iscrafel. 
+\Secherdamon was a master manipulator.
+He was willing to sacrifice anyone for his plots and experiments. 
+He actually did believe that mortal lives had moral value.
+He just believed that his long-term plan was much more important than any mortal lives. 
+It pained him in the beginning to sacrifice them, but after some centuries he became completely numb to the suffering of mortals. 
+He could not let anything deter him from pursuing what he believed was the greater good for the races of \Miith (especially the \draconian race). 
+
+
+
+
 \subsubsection{Megalomania}
 \target{Secherdamon's megalomania}
 \index{stewardship}
@@ -1022,6 +1034,24 @@ His father was \Iurzmacul.
 
 \Ishnaruchaefir{} was an explorer, unraveller and destroyer. 
 He was \hr{Ishnaruchaefir's power}{immensely powerful}. 
+
+
+
+
+
+
+
+
+
+\subsection{Arsenal}
+
+
+
+
+
+\subsubsection{Power}
+\Iscrafel, along with \Secherdamon, was the most powerful \dragon alive at the time of the \thirdbanewar.
+This was because they had delved deeper into the mysteries of the universe than any others alive. 
 
 
 
@@ -1640,6 +1670,26 @@ This forced him to \hr{Ishnaruchaefir's Nadir}{go into a periodic Nadir}.
 
 
 
+\subsubsection{Realized the truth about \Sethicus and \Tiamat}
+Originally \Iscrafel protested against the hivemind plan that \Tiamat and later \Secherdamon had because \Iscrafel felt that the hivemind plan would only make them similar to the \banes. 
+
+\target{Iscrafel learns that Sethicus is in the Threnody}
+In the end (during the final war) \Iscrafel realized that \hr{Sethicus in the Threnody}{\Sethicus had become part of the Threnody}. 
+This made him despair and lose faith in his ideals of enlightenment. 
+He realized that \Sethicus, the most enlightened hero ever, did not achieve fulfillment or even oblivion, but instead eternal suffering and horror as a maddened and powerless ghost. 
+
+\target{Iscrafel accepts Tiamat's hivemind}
+\Iscrafel realized that the \hr{Tiamat's hivemind plan}{\Tiamat's hivemind plan} was the only option.  
+Life as it was now was meaningless and worthless. 
+The \quo{third option} of enlightenment that \Sethicus had sought turned out to be an illusion. 
+\Secherdamon's plan was now the last option that offered any vestige of hope. 
+\Iscrafel ultimately agreed that \Secherdamon's plan was better than the alternative, and so set about helping \Secherdamon. 
+
+
+
+
+
+
 
 
 
@@ -1855,6 +1905,20 @@ But this was actually a ruse to throw his enemies off his trail, hide his true l
 
 In truth, \Ishnaruchaefir{} expended all of his impulsiveness back in the \secondbanewar, where, during the \SecondShrouding, he devastated half of \Miith{} in a moment of irrational anger. 
 He learned from that and never let his anger control him again.
+
+
+
+
+
+\subsubsection{Insanity}
+\Criseis feared \Iscrafel, for she knew that he was \hr{Vril shokraan}{\emph{vril shokraan}}\dash so wise as to be considered dangerously insane.
+But she braves her fear and stands by him, for she believes that she keeps him slightly sane, and that he would be a worse menace to the world without her. 
+He was saner back when \Criseis’s siblings were alive. 
+Now she is all he has left. 
+
+\Iscrafel is cruel and hateful and known to visit gruesome torment and long-term psychological terror on his enemies (and he counts many as his enemies, including the entire \resphan race). 
+He was more cruel (but less calculating) than his brother \Secherdamon. 
+
 
 
 
@@ -2169,16 +2233,6 @@ In practice, \Secherdamon (with his subtler methods) achieved far more.
 
 
 
-\subsubsection{The Imetrium}
-\target{Ishnaruchaefir and the Imetrium}
-\Ishnaruchaefir had relatively good relations with the Imetrium. 
-He appeared in \hs{Imetric mythology}, and here for once he was not reviled. 
-This was because \Sarokash was his kinsman and his old ally. 
-
-
-
-
-
 \subsubsection{\NerrhanKoss}
 \Ishnaruchaefir{} owes some measure of allegiance towards the \xs{} \hr{Nerrhan-Koss}{\NerrhanKoss}, who is sort of his mentor and patron. 
 It was \NerrhanKoss{} who \hr{Glaive origin}{gave him his glaive, sort of}. 
@@ -2197,6 +2251,14 @@ The stories came from the fact that \Secherdamon, one of the most influential Se
 But this was not true. 
 \Secherdamon{} had no authority to \quo{exclude} \Ishnaruchaefir{} from the Sentinels. 
 In secret, \Ishnaruchaefir{} actually maintained more Sentinel contacts and covert influence than most people believed. 
+
+
+
+
+
+\subsubsection{\Tiamat's hivemind}
+\Iscrafel suspected that \hr{Tiamat's hivemind is like the Banes}{the \dragons were doomed to downfall like the \voyagers}. 
+Late in his life \hr{Iscrafel accepts Tiamat's hivemind}{he came to accept this} and decided to help \Tiamat and \Secherdamon. 
 
 
 
@@ -2883,8 +2945,62 @@ She has a number of artifacts that are now highly sought-after relics.
 
 
 \subsubsection{Ungod of the Outer Darkness}
-\index{Ungod}
+\target{Ungod}
+\index{Ungod}%
 After her defeat, \Tiamat became the \hr{Ungod} of the Outer Darkness. 
+
+Her goal was to absorb all intelligent life on \Miith and unite them all in one great Concord. 
+She found the \banes and conquered them and made them her slaves, part of her Concord hivemind. 
+That was one of the reasons why the \banes were so horrid: 
+They were not individuals. 
+They were, in a sense, soulless\dash but also part of something greater and terrifying. 
+
+\Tiamat masterminded the fall of Semiza and the rise of the \resphain.
+She made Semiza corrupt the \resphain to her service. 
+She made them invade \Miith and wage war against the \ophidian races. 
+
+\Tiamat wanted to grow strong and escape from her awful prison. 
+The advent of \Lithrim finally freed her. 
+She was now free. 
+Ramiel, \Azeraid and \Iscrafel managed to destroy \Daggerrain and the \bane hordes, but they could not stop the Mother. 
+\Tiamat was now awake, and she would devour the world. 
+
+(\Daggerrain was a servant of the \hr{Voidbringer}, the cosmic god of the \banes. 
+The Voidbringer is separate from the Ungod, although they are often conflated by the ignorant.)
+
+\target{Tiamat's hivemind plan}
+But all was not completely bleak. 
+\Tiamat's merger with the \banes made her more stagnant and decaying and destructive than she might otherwise have been.
+The heroes had destroyed this, the worst part of her. 
+And in their own quests they had grown strong.
+They now represented a mighty and virtuous force of positive change. 
+\Tiamat absorbed them, and in doing so she absorbed their virtue and strenght and made it part of her.
+So they would live on in her, and their deeds and legacy would help steer the great Mother. 
+Now \Tiamat would devour everything on the planet and then move on to conquer the universe. 
+
+And the Mother spread her wings. 
+
+
+
+
+
+\subsubsection{\Tiamat becomes a cosmic predator like the \banes}
+\target{Tiamat's hivemind is like the Banes}
+\hr{Banes are created}{The \banes were descendants of the \voyagers}. 
+They were what the \voyagers inevitably had to evolve into if the \voyagers were to continue their progress. 
+Just as the \voyagers had no choice but to become the destructive \banes, so \Tiamat's hivemind was a step in the same direction. 
+With the hivemind, the people of \Miith (who were themselves seeded by the Voyagers) became a bloated, life-consuming horror that would eventually suck dry the Heart of \Miith and need to travel to other worlds to consume them. 
+They would become a cosmic parasite (or a cosmic predator, depending on your view).
+
+This was the only progress possible. 
+The alternative was to stagnate and do nothing and eventually be overrun by some other civilization who had \quo{progressed} further up/down the ladder of cosmic evolution\dash in this case the \banes. 
+So there were only two choices: 
+Die, or live long enough to become the villain. 
+
+\Sethicus railed agains this and hoped that a third option existed. 
+
+\Iscrafel suspected the above, but only late in his life (during the \thirdbanewar) \hr{Iscrafel accepts Tiamat's hivemind}{did he come to fully understand it}. 
+
 
 
 
@@ -3001,6 +3117,15 @@ An \ophidian.
 
 
 
+\subsubsection{Mummified relics}
+\target{Relics of Sethicus}
+After the death of \Sethicus, it was possible to commune with the remnants of his spirit to some limited degree by using the mummified remains of his body. 
+He could still be contacted to some extent via his mummified body.
+
+
+
+
+
 \subsubsection{Tomb}
 \target{Sethicus tomb}
 \Sethicus's \quo{tomb} was a colossal temple. 
@@ -3088,30 +3213,20 @@ Some \ophidians \hr{Ophidians follow Sethicus under Durance}{carried on his reli
 
 
 \subsubsection{Death and transcendence}
-\target{Sethicus became a god}
-\target{Sethicus becomes a god}
+\target{Sethicus in the Threnody}
 \Sethicus \hr{Sethicus dies}{died in the \firstbanewar}. 
 
 But unbeknownst to most, a remnant of \Sethicus's powerful soul that lingered on as an undead, quasi-conscious presence.
 When \Sethicus died, his occult mastery was so great and his will so powerful that his soul did not perish, but transcended from \Miith and became a disembodied god.
-His spirit lived on, albeit in a shattered, weakened state.
-According to legend, he went on to ride with the \xss in eternity.
-He could still be contacted to some extent via his mummified body.
-His wraith maintained some fetters to the body.
+His spirit lived on, but in a horrid, maddened state. 
 
-A bit like the Emperor of Mankind in \cite{RPG:Warhammer40000}.
+He became a new voice in the \hr{Threnody}\dash a tortured wraith, a mammoth \daemon doomed to howl in madness forever. 
 
-After his permanent death, \ps{\Sethicus} soul lived on. 
-He transcended to a higher spiritual world and became a higher being, perhaps one like the \xss. 
-He was the wisest of all \dragons and knew much Gnosis that no other \dragon had attained, so even when he had no more power in \Miith, he was still worshipped as a spiritual guide. 
+\hr{Iscrafel learns that Sethicus is in the Threnody}{\Iscrafel was horrified to discover this.}
 
-This was because of his great spiritual mastery, in accordance with \hr{Sethican philosophy}{\Sethican philosophy}. 
-
-See also the section on \hr{Draconic immortality}{\draconic immortality}. 
-
-The still-living could not fully ascertain whether \Sethicus still existed in some form.
-Some \ophidians and \dragons believed that he still existed.
-Some of them began to worship him as an absconded god. 
+Some living \dragons and \ophidians believed that \Sethicus still lived as an enlightened, disembodied cosmic god.
+Some of them began to worship him (and his \hr{Relics of Sethicus}{mummified relics}) as an absconded god.
+But few suspected the truth, and those who did went insane still-living could not fully ascertain whether \Sethicus still existed in some form.
 
 
 
@@ -3127,7 +3242,7 @@ Compare to Adam Kadmon in \Cabbalist theory (whose body contains the ten \sephir
 
 \lyricswikipedia{Adam_Kadmon}{Adam Kadmon}{
   The conception of Adam Kadmon becomes an important factor in the later Kabbalah of Luria. 
-  Adam Kadmon is with him no longer the concentrated manifestation of the Sefirot, but a mediator between the \emph{En-Soph} ("Infinite") and the \emph{Sephiroth}. 
+  Adam Kadmon is with him no longer the concentrated manifestation of the Sefirot, but a mediator between the \emph{En-Soph} (\quo{Infinite}) and the \emph{Sephiroth}. 
   The \emph{En-Soph}, according to Luria, is so utterly incomprehensible that the older Kabbalistic doctrine of the manifestation of the \emph{En-Soph} in the \emph{Sephiroth} must be abandoned. 
   Hence he teaches that only the Adam Kadmon, who arose in the way of self-limitation by the \emph{En-Soph}, can be said to manifest himself in the \emph{Sephiroth}. 
 }
@@ -3156,6 +3271,16 @@ To the \Ortaicans, \Sethicus was known as the \taortha \hr{Settras}{\Settras}.
 
 
 \subsection{Personality}
+
+
+
+
+
+\subsubsection{Addiction to knowledge}
+\target{Sethicus addicted to knowledge}
+Sethicus confessed that he feared his quest would only lead him to madness and doom. 
+But he was addicted and had to move forward. 
+\hr{Addiction to knowledge}{Enlightenment was highly addictive}. 
 
 
 
@@ -3203,9 +3328,16 @@ Where most \ophidians were \hr{Ophidian philosophy}{atheistic and nihilistic}, \
 
 
 
+\subsubsection{Necrocosmos}
+\Sethicus pioneered the theory of the \hs{Necrocosmos}. 
+
+
+
+
+
 \subsubsection{Free will}
 \target{Sethicus and free will}
-\Sethicus revolutionized \caisith philosophy when proved a theorem establishing that\dash under certain special conditions\dash \caisith individuals (and perhaps other races) could reach a state of \emph{null causation} (also called \emph{null position}) where truly free choice became possible. 
+\Sethicus revolutionized \caisith philosophy when he proved a theorem establishing that\dash under certain special conditions\dash \caisith individuals (and perhaps other races) could reach a state of \emph{null causation} (also called \emph{null position}) where truly free choice became possible. 
 
 
 
@@ -3263,7 +3395,7 @@ That way they could pass his writings off as delusional ramblings instead of hor
 His goal was not simply magical and worldly power for their own sake, but as stepping stones toward reaching a higher state of existence. 
 
 The \dragons took a great leap in their development when, with the help of \KhothSell, they \hr{Draconic immortality}{gained their True Immortality}. 
-\Sethicus himself had achieved so great a spiritual mastery that his soul was able to survive the permanent destruction of his body and \Sethicus \hr{Sethicus becomes a god}{become a disembodied god}. 
+\Sethicus himself had achieved so great a spiritual mastery that his soul was able to survive the permanent destruction of his body and \Sethicus \hr{Sethicus in the Threnody}{become a disembodied wraith}. 
 
 \citeauthorbook[p.65]{VengerSatanis:CthulhuCult}{Venger Satanis}{Cthulhu Cult}{
   While crossing the Abyss, most of our personality disintegrates. 
@@ -3367,275 +3499,6 @@ And since those works contained many spells that did work, they were accepted as
 \target{Sethicus's children}
 \Sethicus had only one child, \hr{Nexagglachel}{\Nexagglachel}. 
 Thus \Sethicus's bloodline perished when \Nexagglachel and \hr{Nexagglachel's children}{his daughters} died.
-
-
-
-
-
-
-
-
-
-\subsection{Death of the Universe}
-\target{Dead Universe}
-\target{dead universe}
-\target{True Life}
-\target{True Death}
-\target{False Life}
-\target{Necrocosmos}
-\Sethicus told that there was an Age of Life when the universe was once beautiful all over, shining bright with interconnected and happy life. 
-In those days everything was bright and warm and beautiful, full of stars and nebulae, not the cold and dark void that it later became. 
-All beings were blessed with True Life, and their lives were wonderful. 
-All creatures were unspeakably beautiful, numinous and luminous. 
-Angels.
-There was only joy, pleasure and happiness. 
-There was no anger, no fear and no pain. 
-Living creatures would merge, split apart and change form forever, for there was no death. 
-
-\target{Greatest Race}%
-\index{Greatest Race, the}%
-The great civilization at this time was that of the Numina, the Numinous Ones, the Greatest Race. 
-(It might have been the greatest of many civilizations, or it might have been one single civilization spanning the entire universe.)
-They ascended higher in learning, technology and wisdom than any race had done before. 
-
-Then a \quo{cancer} appeared. 
-It infected and destroyed the True Life. 
-From there, things went quickly downhill in a darwinian manner, because the True Life was not adapted to cope with the cancer's depredations. 
-
-\Sethicus did not understand how this happened, but he had some reason to believe that the angels went insane and committed suicide.
-He had seen visions of luminous creatures mutilating themselves and one another in the most hideous fashion. 
-Compare to the fictional film \emph{La Fin Absolue du Monde}, found in \cite{Movie:CigaretteBurns}.
-He believed that the Greatest Race realized the true nature of the universe, and it drove them insane. 
-It was horrible to see these beautiful creatures exterminate themselves. 
-It shook \Sethicus' sanity and made him suspect that all life and happiness had to end in horror and cannibalism and destruction. 
-
-The living universe died. 
-Since then it lay as a bleeding, rotting corpse. 
-All True Life had died long ago. 
-
-\citeauthorbook[p.16]{VengerSatanis:CthulhuCult}{Venger Satanis}{Cthulhu Cult}{
-  This entire illusion, our whole world, is a pale reflection of a hidden reality.
-  Corpulent, rotting dreams stretch out farther than infinity and are guided by a foul devotion\ldots{}
-  how can we accept a universe where entropy is the rule?
-}
-
-\index{Necrocosmos}
-Currently the universe lay in a state of False Death. 
-It was a dead universe, a Necrocosmos.
-It was deprived of True Life, but it still twitched and bled and rotted. 
-This state of decay was False Death. 
-It was an interim stage on the way from True Life to True Death. 
-A more accurate term might perhaps be \quo{Incomplete Death}. 
-
-\Dweomers were really bleeding, festering wounds in this corpse, through which oozed the poor residues of life for vermin to feed upon. 
-They were manifestations of False Death. 
-
-\target{Horrors are False Death}
-Many of the \hr{Horrors of the Void}{horrors of the void} were likewise manifestations of rot and decay, of False Death. 
-
-\target{Voyagers are False Life}
-Living beings such as \Miithians were all False Life. 
-False Life could only exist because of False Death. 
-They were diseases, bacteria suckling on the wounds of a dead universe, living upon rot. 
-As such, their lives were short and full of suffering. 
-Even the \voyagers were False Life. 
-
-\target{Banes are True Death}
-Some cosmic gods were believed to be among those enemies who slew the universe. 
-They were agents of True Death. 
-The \banes, among others, were spawn of the forces of True Death.
-Their purpose was to destroy both False Life and the lingering vestiges of True Life and finally bring True Death to the entire universe and return everything to nothingness. 
-
-\target{XS are True Life}
-The \xss were some of the last sickly, twisted, degenerate, tattered remnants of True Life. 
-The \xss did not possess True Life, but they carried some vestige of its power.
-This was the source of their great sorcery. 
-This was why \Sethicus idolized and worshipped them. 
-They were cruel, brutal and destructive beings, but they possessed an inner core of passion and life which \Sethicus admired. 
-All existing \xss were many millions of years old, antediluvian survivors of the Age of Life. 
-No new \xss could ever be spawned\ldots{} unless \hr{Sethicus plan}{\Sethicus's plan} succeeded.
-
-There were also beings called the Screaming Gods. 
-These were the insane survivors of the Greatest Race\dash perhaps even greater and mightier than the \xss.
-Compare to Azathoth from the Cthulhu Mythos.
-
-
-
-
-
-\subsubsection{Outer ones}
-\Sethicus had journeyed with his mind far to the very edge of the universe.
-There, on the dim shores beyond space and chaos, he had beheld \textsc{them}\dash those who were once the first race, the luminous ones. 
-They are the brothers of \RuinSatha. 
-Each of them is like a universe unto itself. 
-They were once beautiful, but they have fallen from grace and become the essence of corruption.
-They are the blackest foulness, for only the purest light can become the purest darkness. 
-To touch them, to contact them, to even behold or know or conceive of them is to know madness and invite chaos and dissolution and death into the universe. 
-
-
-
-
-
-\subsubsection{Aeons and cycles}
-\Sethicus divided the universe' history into aeons. 
-According to his theory there had once been an Aeon of Life, and everyone was now living in an Aeon of Death. 
-
-\Sethicus had good reason to believe that there had been another Aeon of Death preceding the Aeon of Life.
-This might imply that death was the natural and original state of the universe. 
-A bleak prospect. 
-
-\Sethicus had another hypothesis which said that this had happened more than once: 
-Perhaps the universe underwent cycles, blossoming into an Aeon of Life and decaying into an Aeon of Death, only to blossom again into a new Aeon of Life. 
-\Sethicus liked this idea because it implied that hope was not lost and that True Life could come again.
-But in all his research he never managed to find any evidence supporting this hypothesis.
-He searched desperately for a way to convince himself that all was not lost, and this arguably drove him from sanity.
-
-
-
-
-
-\subsubsection{Imagery}
-\begin{prose}
-  Sethicus:
-  \ta{I have heard the weeping and wailing of the endless void.
-    Thinkest thou that the nothingness itself cannot suffer?
-    Thou knowest nothing.
-    Thou hast not seen what I have seen; the visions of a universe whose every fibre was once alive but now lies dead, trapped in an eternal hell.}
-\end{prose}
-
-\citebandsong{BlindGuardian:ATITM}{Blind Guardian}{This Will Never End}{
-  The vision's bleak and its colour's black.\\
-  Oh, far beyond there is a starving, dying sun.
-}
-
-\citeauthorbook[p.21]{HPLovecraft:TheAncientTrack}{%
-  \HPLovecraft%
-}{%
-  A Poe'et's Nightmare%
-}{%
-  Then flicker'd low the light, and all dissolv'd\\
-  Leaving me floating in the hellish grasp\\
-  Of body'd blackness, from whose beating wings\\
-  Came ghoulish blasts of charnel-scented mist.\\
-  things vague, unseen, unfashion'd, and unnam'd\\
-  Jostled each other in the seething void\\
-  That gap'd, chaotic, downward to a sea\\
-  Of speechless horror, foul with writhing thoughts.\\
-  All this I felt, and felt the mocking eyes\\
-  Of the curs's universe upon my soul;\\
-  Yet naught I saw nor heard, till flash'd a beam\\
-  Of lurid lustre through the rotting heav'ns,\\
-  Playing on scenes I labour'd not to see.\\
-  Methought the nameless tarn, alight at last,\\
-  Reflected shapes, and more reveal'd within\\
-  Those shocking depths that ne'er were seen before;\\
-  Methought from out the cave a demon train,\\
-  Grinning and smirking, reel'd in fiendish rout;\\
-  Bearing within their reeking paws a load\\
-  Of carrion viands for an impious feast.
-}
-
-\citeauthorbook[p.27]{HPLovecraft:TheAncientTrack}{%
-  \HPLovecraft%
-}{%
-  Nemesis%
-}{%
-  I have whirled with the earth at the dawning,\\
-  When the sky was a vaporous flame;\\
-  I have seen the dark universe yawning\\
-  Where the black planets roll without aim,\\
-  Where they roll in their horror unheeded, \\
-  without knowledge or lustre or name.
-}
-
-
-
-
-
-\lyricsauthorbookpage{Ben Counter}{Galaxy in Flames}{114-118}{
-  \ldots{} a vision of broken steppes spread out before Loken, expanses of desolation and plains of rusted machinery like skeletons of extinct monsters. 
-  A hive city on the distant horizon split open like a flower, and from its broken, burning portals rose a mighty tower of brass that punctures the pollution-heavy clouds. 
-  
-  The sky above was burning and the laughter of Dark Gods boomed from the heavens. 
-  
-  \ldots{}
-  
-  He wrenched his mind away from the dying world, and suddenly he was soaring through the galaxy, tumbling between the stars. 
-  He saw them destroyed, bleeding glowing plumes of stellar matter into the void. 
-  A baleful mass of red stars glowered above him, staring like a great and terrible eye of flame. 
-  An endless tide of titanic monsters and vast space fleets vomited from that eye, drowning the universe in a tide of blood. 
-  A sea of burning flames spat and leapt from the blood, consuming all in its path, leaving black, barren wasteland in its wake. 
-  
-  \ldots{}
-  
-  \emph{You are seeing the galaxy die.}
-  
-  \ldots{}
-  
-  Loken could see it where the flames burned through, the endless churning mass of the warp at the heart of everything and the eyes of dark forces seething with malevolence. 
-  \ldots{}
-  Bloated monsters, their bodies heaving with maggots and filth, devoured dead stars as a brass-clad giant bellowed an endless war cry from its throne of skulls and soulless magicians sacrificed billions in a silver city built of lies. 
-  
-  \ldots{}
-  
-  Sindermann had been right. 
-  Loken was hearing the music of the spheres, and it was a terrible sound that spoke of corruption, blood and the death of the universe. 
-}
-
-\Sethicus feared his visions. 
-They drove him half-mad. 
-
-\citeauthorbook[p.28]{HPLovecraft:TheAncientTrack}{%
-  \HPLovecraft%
-}{%
-  Nemesis%
-}{%
-  Oh, great was the sin of my spirit,\\
-    And great is the reach of its doom;\\
-  Not the pity of Heaven can cheer it,\\
-    Nor can respite be found in the tomb:\\
-  Down the infinite aeons come beating \\
-    the wings of unmerciful gloom.
-
-  Through the ghoul-guarded gateways of slumber,\\
-    Past the wan-mooned abysses of night,\\
-  I have lived o'er my lives without number,\\
-    I have sounded all things with my sight;\\
-  And I struggle and shriek ere the daybreak, \\
-    being driven to madness with fright.
-}
-
-
-
-
-
-\subsubsection{The \UmajaTablets}
-\target{Umaja}
-\index{\UmajaTablets}
-The true living beings stored their knowledge in a comsic repository, woven into the very background fabric of the universe itself.
-This was called the \UmajaTablets, although the \quo{tablets} were purely metaphorical.
-Here were recorded their mighty secrets.
-
-But the tablets also showed the creatures' descent into madness and how they eventually destroyed their own civilization and slew the universe. 
-The later sections of the tablets are full of this madness, and by following the tablets in order one gain some insight into how this madness came about. 
-It is horrifying to learn, for to understand this madness is to be afflicted by it.
-Indeed, madness is a necessary consequence of wisdom. 
-
-Thus the \UmajaTablets were \quo{tainted} with madness. 
-\Sethicus dared not read much in the tablets, because he knew it was hurting his sanity. 
-Even he dared not pay so high a price for knowledge. 
-
-\target{Umaja supermind}
-Umaja was originally the shared supermind of the Greatest Race. 
-Their \nexus. 
-\hs{Ramarxes} would use it as inspiration for his \hs{Concord}. 
-
-The knowledge of how to access the \UmajaTablets still existed in later ages. 
-Some sorcerers used them and gleaned much sorcerous knowledge from the tablets.
-There was much power to be found there, but it came with a terrible risk.
-Moreover, reading the tablets was addictive, because they were so fascinating and wondrous and fantastic. 
-Once you began reading them, it was hard to resist the temptation to read on.
-This led quickly to madness. 
 
 
 
@@ -4482,6 +4345,7 @@ Eventually \hr{Sethicus kills Ramarxes}{\Sethicus slew him}.
 \target{Sarokash}
 \index{\Sarokash}
 \Sarokash is the chief god of the Imetric Tribunal and the ruler of the Imetrium. 
+She is actually a \dragon or \nagalord. 
 \also{Imetrium, Tribunal}
 
 
@@ -4493,9 +4357,9 @@ Eventually \hr{Sethicus kills Ramarxes}{\Sethicus slew him}.
 
 
 \subsection{Physique}
-In his true form, \Sarokash is a giant \nagalord. 
-He often takes the form of a \scatha. 
-In all forms, his scales are glittering emerald green. 
+In her true form, \Sarokash is a giant \nagalord. 
+She often takes the form of a \scatha. 
+In all forms, her scales are glittering emerald green. 
 
 
 
