--- a/Characters/ResphanCharacters.tex
+++ b/Characters/ResphanCharacters.tex
@@ -5021,6 +5021,25 @@ He was eventually \hr{Osra dies}{slain by \Lethiarch}.
 
 
 
+\section{Rayne \Tarcharos}
+\target{Rayne Tarcharos}
+Rayne \Tarcharos was an early \resphan sorcerer who lived before the fall of \Merkyrah.
+He was the founder of the evil empire of \hr{Tarcharos}{\Tarcharos}.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \section{\Sartheron}
 \target{Sartheron}
 \index{\Sartheron}
