--- a/Story/OphidianCivilization.tex
+++ b/Story/OphidianCivilization.tex
@@ -171,8 +171,7 @@ The years passed, a million years and more, and still the \Kraken{} Queen and he
 
 
 
-\section{The \Ophidian{} Civilization}
-\target{Ophidian humanoids}
+\section{The Phaetonian Age}
 Hundreds of millions of years after the \voyagers{} had left \Miith{}, the \ophidians{} evolved\dash also called the \caisith. 
 From the ashes of the devastated world they rose up to make themselves its masters.
 They went on to form great empires and develop marvelous science and sorcery.
@@ -191,22 +190,11 @@ They went on to form great empires and develop marvelous science and sorcery.
 
 
 
-\subsubsection{Nibir}
-\target{Nibir}
-\target{Phaetonian}
-\index{Nibir}%
-\index{Phaetonian}%
-Before the \ophidians, the Nibir dominated \Miith. 
-The Nibir were aliens who came from the world of Phaeton. 
-
-A Nibir looked like a giant \emph{Anomalocaris}, but with many long spindly jointless legs like the spines on a \emph{Hallucigenia}, and with many soft \emph{Hallucigenia}-like tentacles on its back. 
-
-They were served by a lesser race called the Phaetonians. 
-A Phaetonian was roughly human-sized or slightly larger. 
-It resembled a \emph{Marrella} (a trilobite-like creature from the Burgess Shale), but with fewer limbs: 
-Four long multi-jointed crab- or spider-like legs and four slimmer \quo{arms}. 
-
-The Phaetonian cities took the form of giant coral arches. 
+\subsubsection{Coming of the Phaetonians}
+\target{Phaetonian age}
+Before the \ophidians, the \hr{Nibir} dominated \Miith. 
+They were served by a lesser race called the \hr{Phaetonians}{Phaetonians}. 
+They were an alien race that invaded \Miith and conquered it. 
 
 
 
@@ -243,6 +231,30 @@ Gradually they developed intelligence and culture.
 They learned to dream about the future of their race, to focus on it and sacrifice for it.
 
 Eventually the \caisith would \hr{War against the Nibir}{wipe out the Nibir and the Phaetonians}.  
+
+
+
+
+
+\subsubsection{\Ophidians before the Phaetonians?}
+Some say that the \caisith existed and were intelligent (at a very early stone age level) before the coming of the Phaetonians. 
+
+
+
+
+
+\subsubsection{Time frame}
+Legend has it that the Phaetonian domination lasted one million years. 
+
+
+
+
+
+\subsubsection{\Ophidians created by \voyagers?}
+\target{Voyagers create Ophidians}
+Legend says that the \caisith (and possibly the \nephilim as well) were created by the \voyagers. 
+Myths disagree greatly on the appearance of the Voyagers. 
+\hr{Myths about Voyager appearance}{Some wrongly have the \voyagers look like snakes} (in an attempt to explain why snakes are sacred).
 
 
 
@@ -361,15 +373,45 @@ Even in their time of greatness they feared these relics of an elder age.
 
 
 
-\subsubsection{Wars against the Nibir}
+\subsubsection{Wars against the Phaetonians}
 \target{War against the Nibir}
 For thousands of years the cruel \hr{Phaetonian}{Phaetonians} used the early \ophidians as slaves or hunted them for sport. 
 But the \ophidians fought. 
 
-The fledging \ophidian civilization waged bitter wars against the Nibir and eventually prevailed. 
+The fledging \ophidian civilization waged bitter wars against the Phaetonians.
+The Phaetonian civilization was actually declining. 
+They were sinking into madness and despair.
+This made them decadent and cruel, but it also made them slothful and ill-organized and vulnerable to the well-organized and highly motivated \caisith upstarts. 
+
+Eventually the \caisith prevailed. 
 They destroyed all Nibir and Phaetonians on \Miith. 
 
 Compare this to the wars waged by humanity against the elder races in \cite{RobertEHoward:TheShadowKingdom}. 
+
+
+
+
+
+\subsubsection{Inter-Phaetonian politics}
+According to myth, the greatest of the Nibir were Akum, Shind and Nikush, and they divided the world between them. 
+
+
+
+
+
+
+\subsubsection{Phaetonian extinction}
+\target{Phaetonian extinction}
+After the Phaetonians were wiped from \Miith, many \caisith feared that they would return. 
+After all, it was known that the Phaetonians were not native to \Miith. 
+It was thinkable that they would send reinforcements or another invasion force from their homeworld. 
+But they never did.
+The Phaetonians never returned. 
+
+A few pieces of information gleaned from Phaetonian communications hinted at the truth: 
+At the time of the \caisith war against the Phaetonians, the Phaetonian race was already beset by enemies elsewhere. 
+Their homeworld was under \bane invasion. 
+Their civilization was destroyed and the Phaetonian and Nibir races became extinct. 
 
 
 
@@ -399,6 +441,46 @@ In earlier days, the \ophidians waged great wars against the \noggyaleth and dro
 
 
 
+\subsubsection{Lords of the Deep}
+\target{Ophidians against Lords of the Deep}
+The \hs{Lords of the Deep} had fought against the \moonthings. 
+After the \ophidians had weakened the \moonthings, the Lords of the Deep returned, now more powerful. 
+They conquered the planet and enslaved some \ophidians. 
+
+The \ophidians fought back. 
+They remembered that they had prevailed against elder races before. 
+They vanquished the Lords of the Deep and cast them out, back into the deep sea. 
+The \ophidians were now truly the rulers of \Miith. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section{The \Ophidian{} Civilization}
+\target{Ophidian humanoids}
+
+
+
+
+
+
+
+\subsection{After the \ophidian rise to power}
+
+
+
+
+
 \subsubsection{Early \ophidian culture}
 \target{Early Ophidian culture}
 The \ophidians developed culture and civilization early on, many millions of years before \Tiamat. 
@@ -415,21 +497,6 @@ Only hints and myths.
 What little they knew, they feared.
 Only a few mad cultists worshipped them, and with little success.
 \Sethicus was the first who was strong and brave and daring and heretic enough to \hr{Sethicus understands XS}{\emph{understand} the \xss}. 
-
-
-
-
-
-\subsubsection{Lords of the Deep}
-\target{Ophidians against Lords of the Deep}
-The \hs{Lords of the Deep} had fought against the \moonthings. 
-After the \ophidians had weakened the \moonthings, the Lords of the Deep returned, now more powerful. 
-They conquered the planet and enslaved some \ophidians. 
-
-The \ophidians fought back. 
-They remembered that they had prevailed against elder races before. 
-They vanquished the Lords of the Deep and cast them out, back into the deep sea. 
-The \ophidians were now truly the rulers of \Miith. 
 
 
 
@@ -470,6 +537,21 @@ The \nexus would safeguard their souls after death and allowed them to wield pow
 
 
 
+\subsection{Wars}
+Before the time of the \dragons, the \caisith waged terrible wars amongst themselves. 
+They were techno-barbarians led by warlord kings and necromancers. 
+In the absence of fossil fuels they could not build war machines like ours, so instead they used sorcery to breed living weapons. 
+They created abominations like in the game \emph{Cave Evil}. 
+
+
+
+
+
+
+
+
+
+
 \subsection{Golden age}
 \target{Ophidian Golden Age}
 \target{Ophidian golden age}
@@ -485,28 +567,9 @@ The \ophidians{} built a civilization which was great, mighty, proud, enlightene
 }
 
 \citeauthorbook[p.44--45]{ClarkAshtonSmith:UbboSathla}{Clark Ashton Smith}{Ubbo-Sathla}{
-  At length, after aeons of immeroial brutehood, it became one of the lost serpent-men who reared their cities of black gneiss and fought their venomous wars in the world's first continent.
+  At length, after aeons of immemorial brutehood, it became one of the lost serpent-men who reared their cities of black gneiss and fought their venomous wars in the world's first continent.
   It walked undulously in antehuman streets, in strange crooked vaults; it peered at primeval stars from high, Bebelian towers; it bowed with hissing litanies to great serpent-idols.
 }
-
-
-
-
-
-\subsubsection{Interstellar civilization}
-\target{High-tech civilization}
-\target{interstellar civilization}
-\index{technology!interstellar civilization}
-The \ophidians built an interstellar civilization. 
-Using magic and other science, creatures could travel between Realms and through the vastness of space to \cooperate, trade or wage wars. 
-
-\Sethicus \hr{Sethicus brought innovation}{would later help expand this civilization}. 
-
-They built colonies on other planets. 
-Here they found remnants of extinct alien civilizations.
-Some of the colonies, however, were destroyed when those remnants rose up in vengeance against the \Miithian interlopers.
-
-There were also \hs{living machines}. 
 
 
 
@@ -773,8 +836,6 @@ Later in his life, he became preoccupied with alienist sorcery.
 This came to dominate his life and career. 
 
 \Sethicus was a primus motor when it came to pushing the boundaries of space travel and establishing an interstellar \ophidian empire. 
-Before him, they had been a spacefaring race for millennia, but rarely ventured beyond their solar system, and they had done no colonization beyond the occasional research station in the solar system. 
-\Sethicus made them found settlements on many planets and moons in the solar system and even beyond it, and they began terraforming processes. 
 
 
 
@@ -808,6 +869,20 @@ She followed him around on his journeys and learned much.
 She saw the existing \ophidian oligarchy as decadent and corrupt. 
 She saw the dystopia of the \hr{Enslaved Ophidian subraces}{enslaved \caisith subraces} and wanted to change it.
 She wanted to seize power and improve the world. 
+
+
+
+
+
+
+
+
+
+\subsection{Searching for Phaetonian writings}
+\Sethicus and \Tiamat were looking for \hr{Phaetonian writings}{Phaetonian writings}, hoping to glean the secrets of their sorcery and technology. 
+The few known Phaetonian spiritual writings hinted at great cosmic secrets.
+\Sethicus believed he could uncover the secrets of their sorcery.
+
 
 
 
@@ -2026,8 +2101,7 @@ These were treated as sacred by the surviving \Sethican cultists.
 \section{War against \Shuggon}
 \target{Shuggon}
 \index{\Shuggon}
-The \ophidians still had their interstellar civilization. 
-Eventually they discovered the world of \Shuggon. 
+The \ophidians discovered the world of \Shuggon. 
 (This was probably after \Sethicus was laid in durance, but it might also have been before.)
 
 \Shuggon was not a planet \emph{per se}. 
@@ -2109,10 +2183,7 @@ Especially after \hr{Noggyaleth lose a war before the FBW}{having recently lost 
 \subsubsection{Technology at the time}
 \target{FBW technology}
 \index{technology!\bane}
-When the \banes invaded, the \ophidians had an interstellar civilization.
-They commanded dozens of planets. 
-The \banes \hr{Interstellar Bane empire}{likewise had an interstellar empire}. 
-But \Miith was the important planet that they had been searching for all along. 
+\Miith was the important planet that the \banes had been searching for all along. 
 It contained a Heart full of \voyager-tampered energy, and the \noggyal \hs{mother-mass}, which was the \quo{other half} that the \banes wanted. 
 
 The war lasted centuries. 
@@ -2380,8 +2451,6 @@ Eventually \Sethicus fell, but his corpse was preserved.
 He overloaded his body with power and could not resurrect.
 He was believed lost.
 Out of respect for his heroism, they took his body and enshrined it in \hr{Baltherium}{\Baltherium}, where it was \hr{Elder Dragons worshipped}{worshipped as a dead god}. 
-
-But \hr{Sethicus became a god}{\Sethicus's soul lived on as a disembodied god}.
 
 
 
