--- a/Story/Sentinels04Notes.tex
+++ b/Story/Sentinels04Notes.tex
@@ -1670,39 +1670,13 @@ In a way, this is \hr{Ishnaruchaefir sees three futures}{\ps{\Ishnaruchaefir} ni
 
 
 \section[The Return of Tyrasshana]{The Return of \Tiamat}
-\target{Ungod}
-\index{Ungod}
+\index{Ungod}%
 In secret, \Tiamat was behind the \resphain. 
-She was the Ungod of the Outer Darkness.
-Her goal was to absorb all intelligent life on \Miith and unite them all in one great Concord. 
-She found the \banes and conquered them and made them her slaves, part of her Concord hivemind. 
-That was one of the reasons why the \banes were so horrid: 
-They were not individuals. 
-They were, in a sense, soulless\dash but also part of something greater and terrifying. 
-
-\Tiamat masterminded the fall of Semiza and the rise of the \resphain.
-She made Semiza corrupt the \resphain to her service. 
-She made them invade \Miith and wage war against the \ophidian races. 
-
-\Tiamat wanted to grow strong and escape from her awful prison. 
-The advent of \Lithrim finally freed her. 
-She was now free. 
-Ramiel, \Azeraid and \Iscrafel managed to destroy \Daggerrain and the \bane hordes, but they could not stop the Mother. 
-\Tiamat was now awake, and she would devour the world. 
-
-(\Daggerrain was a servant of the \hr{Voidbringer}, the cosmic god of the \banes. 
-The Voidbringer is separate from the Ungod, although they are often conflated by the ignorant.)
-
-But all was not completely bleak. 
-\Tiamat's merger with the \banes made her more stagnant and decaying and destructive than she might otherwise have been.
-The heroes had destroyed this, the worst part of her. 
-And in their own quests they had grown strong.
-They now represented a mighty and virtuous force of positive change. 
-\Tiamat absorbed them, and in doing so she absorbed their virtue and strenght and made it part of her.
-So they would live on in her, and their deeds and legacy would help steer the great Mother. 
+\hr{Ungod}{She was the Ungod of the Outer Darkness}.
 Now \Tiamat would devour everything on the planet and then move on to conquer the universe. 
 
 And the Mother spread her wings. 
+
 
 
 
