--- a/World/DenizensMinor.tex
+++ b/World/DenizensMinor.tex
@@ -527,6 +527,16 @@ Compare to the Mi-Go, as described in \emph{Delta Green} (\emph{Call of Cthulhu}
 
 
 
+\subsubsection{Myths about their appearance}
+\target{Myths about Voyager appearance}
+Myths disagree greatly on the appearance of the Voyagers. 
+Some make them into snakes. 
+In reality they were more like winged starfish. 
+
+
+
+
+
 
 
 
@@ -538,7 +548,8 @@ Compare to the Mi-Go, as described in \emph{Delta Green} (\emph{Call of Cthulhu}
 
 
 \subsubsection{Servitor races}
-The \voyagers{} had hordes of servitor races that dwelt with them and served them (different servant races in different aeons). Some envision this mythical time as a utopian age. 
+The \voyagers{} had hordes of servitor races that dwelt with them and served them (different servant races in different aeons). 
+Some envision this mythical time as a utopian age. 
 
 
 
@@ -605,18 +616,15 @@ Also comparable to Bal-Sagoth's Ultima Thule.
 
 
 
+\subsubsection{Created \ophidians and \nephilim}
+Some myths say that the \voyagers \hr{Voyagers create Ophidians}{created the \ophidians}, and \hr{Voyagers create Nephilim}{maybe also the \nephilim}.
+
+
+
+
+
 \subsubsection{False Life}
 According to some myths, the \hr{Voyagers are False Life}{\voyagers were False Life}. 
-
-
-
-
-
-
-
-
-
-\subsection{History}
 
 
 
@@ -1008,11 +1016,14 @@ The \aryothim \hr{Aryoth religion}{built a lot of religion on this}.
 
 
 
-\target{Aryoth inventors}
-\index{technology!\aryoth}
-The \quiljaaran{} often looked down on the \aryoth{} and considered them uncivilized barbarians due to their warlike tendencies. 
-But they were actually great inventors. 
-Where \hr{QJ philosophers}{the \quiljaaran{} cared more about philosophy and science} for its own sake, the \aryothim{} were more interested in practically applied technology. 
+\subsubsection{Enslaved by \resphain}
+\target{Aryothim enslaved}
+The \resphain discovered a weakness in the \aryoth \nexus. 
+Through this loophole they were able to penetrate with their own \nexus and dominate most of the \aryoth \nexus.
+They enslaved many \aryothim.
+They used these slaves as fighters and labourers. 
+Among other things, they used them to keep their servant \humans in line.
+
 
 
 
@@ -1049,6 +1060,12 @@ The \aryothim{} \hr{Aryoth seamanship}{were often great sailors}.
 
 
 \subsubsection{Technology}
+\target{Aryoth inventors}
+\index{technology!\aryoth}
+The \quiljaaran{} often looked down on the \aryoth{} and considered them uncivilized barbarians due to their warlike tendencies. 
+But they were actually great inventors. 
+Where \hr{QJ philosophers}{the \quiljaaran{} cared more about philosophy and science} for its own sake, the \aryothim{} were more interested in practically applied technology. 
+
 The \aryothim \hr{Aryoth technology}{developed quite a lot of technology}. 
 
 \target{Aryoth weapons}
@@ -2188,6 +2205,30 @@ Cold will numb and slow a \naiad{}. If frozen, she will go into torpor but not d
 
 
 
+\section{Nibir}
+\target{Nibir}
+\index{Nibir}%
+Before the \ophidians, the Nibir \hr{Phaetonian age}{dominated \Miith}. 
+The Nibir were aliens who came from the world of Phaeton. 
+
+A Nibir looked like a giant \emph{Anomalocaris}, but with many long spindly jointless legs like the spines on a \emph{Hallucigenia}, and with many soft \emph{Hallucigenia}-like tentacles on its back. 
+
+They were served by a lesser race called the \hr{Phaetonians}{Phaetonians}. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \section{\Nephil}
 \target{Nephil}
 \index{\nephil}
@@ -2285,6 +2326,19 @@ Like women.
 
 
 \subsection{History}
+
+
+
+
+
+\subsubsection{Created by the \voyagers?}
+\target{Voyagers create Nephilim}
+Some myths say that the \nephilim were created by the \voyagers (\hr{Voyagers create Ophidians}{just like the \ophidians before them}). 
+
+
+
+
+
 \subsubsection{\Ophidian{} servitude}
 \target{Nephilim worship Ophidians}
 Originally, before the time of \Kserasshana, the \nephilim{} served  \ophidians{} and worshipped them as gods. 
@@ -3162,6 +3216,71 @@ They are portrayed as ancient and benevolent, mourning and weeping whenever \Mii
 Compare to the \quo{Daughters of Beulah} in \authorbook{William Blake}{The Four Zoas}. 
 
 \WanderersInDarknessEmph is full of references to the sorrowing \nymphs. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section{Phaetonian}
+\target{Phaetonian}
+\target{Phaetonians}
+\index{Phaetonian}%
+The Phaetonians were an alien race that once conquered \Miith.
+They came from the world of Phaeton. 
+They served the \hr{Nibir}. 
+
+A Phaetonian was roughly human-sized or slightly larger. 
+It resembled a \emph{Marrella} (a trilobite-like creature from the Burgess Shale), but with fewer limbs: 
+Four long multi-jointed crab- or spider-like legs and four slimmer \quo{arms}. 
+
+
+
+
+
+
+
+
+
+\subsection{Culture}
+
+
+
+
+
+\subsubsection{Coral arches}
+The Phaetonian cities took the form of giant coral arches. 
+
+
+
+
+
+\subsubsection{Writings}
+\target{Phaetonian writings}
+The Phaetonians had a technologically advanced civilization and vast stores of written knowledge.
+When the Phaetonians on \Miith were wiped out, almost all their knowledge was lost. 
+
+Most of the Phaetonians' knowledge was inaccessible to the Caisith because they did not understand Phaetonian technology. The Caisith knew that the Phaetonians stored most of their data on coils of metal wire, but they were never able to decipher them. Many such coils were recovered, but they sat useless in museums and collections. Eventually most perished. 
+
+Some physical Phaetonian writings did exist. 
+Some of them were poetry or ritual inscriptions with spiritual significance.
+They hinted at great cosmic secrets.
+
+The early Caisith deciphered the Phaetonian script (which consisted of great complex diagrams of curves, coils, whorls and spirals). 
+Later, this knowledge was lost and had to be rediscovered by Caisith archaeologists.
+
+The Caisith had more luck with the Phaetonians' artworks. 
+
 
 
 
