--- a/World/ErebeanRaces.tex
+++ b/World/ErebeanRaces.tex
@@ -70,6 +70,97 @@ They have cruelly exploited their homeworld until \Erebos{} is now a dying husk,
 
 
 
+\subsection{Biology}
+
+
+
+
+
+\subsubsection{Entropy and True Death}
+\index{Entropy}
+\target{Entropy}
+\target{Bane parasitism}
+The \banes{} are a force of Entropy. 
+This is a major theme. 
+The \banes{} are inherently destructive and parasitic. 
+They can sustain themselves and grow stronger only by feeding upon their own kind. 
+
+This means that the \banes{} are doomed to stagnation and decline. 
+
+The \banes{} are creatures of the cold, darkness and emptiness. 
+They steal, absorb and swallow everything. 
+This is unlike the \dragons, who \hr{Dragons radiate life}{radiate life and light alike}. 
+
+\hr{Daggerrain}{\Daggerrain} and his master, the \hr{Voidbringer}{\Voidbringer}, understand this. 
+They seek to improve their race and let the \bane{} people evolve, to achieve perfection. 
+To do this, they must look outwards and find new sources of life, new cosmic \dweomers{} to drain, new power with which to infuse their race. 
+
+This is why they have set their eyes on \Miith{}. 
+\Miith{} has the \hr{Heart}{Heart of \Miith}, a powerful \dweomer{}, ultimately based on Chaos. 
+Drawing on the life-giving power of the Heart, and working together with \hr{Semiza}{\ps{\Semiza}} sorcerers, \hr{Semiza designs Resphain}{they were able to create} the \hr{Resphan}{\resphain}, who were intended as the new generation of \banes, empowered with the creative force of the Chaotic Heart. 
+The \hr{Satharioth}{\satharioth} took this a step forward and stole the Chaotic \xzaishannic{} power from the \dragons, making themselves even greater. They see themselves as the future of the \bane{} race, the heirs of the \bane{} legacy.
+
+According to some myths, the \banes were \hr{Banes are True Death}{agents of the forces of True Death}.
+
+
+
+
+
+\subsubsection{Life cycle}
+\index{cannibalism!\banes}
+\target{Bane cannibalism}
+The \banes are cannibalistic. 
+There are several tiers of them, from the lowly \banespawn{} through \lesserbanes{} to \banelords. 
+\Banes{} can rise in the ranks only by devouring the souls of other creatures, including (mandatorily!) other \banes. 
+New \banespawn{} are created by sacrificing a \lesserbane{} or a \banelord. 
+
+
+
+
+
+
+
+
+
+\subsection{Equipment}
+
+
+
+
+
+\subsubsection{Bane technology}
+\target{Bane technology}
+\index{technology!\bane}
+The \banes{} command large reserves of spaceships and other technological artifacts salvaged from the \voyagers{} on \Erebos, and perhaps also other cultures whom the \banes{} have conquered. 
+
+During the \hr{FBW}{\firstbanewar}, an important edge that the \banes{} had over the \Miithians was their superior technology. 
+
+The \banes{} do not understand the technology. They are unable to create new things, or even replicate existing ones, and are hard pressed to just repair and maintain what they have. 
+This is partly because the \voyagers{} were infinitely more advanced than their \bane{} spawn, and partly due to their being \hr{Entropy}{a force of Entropy, afflicted with stagnation and decay}. 
+After all, 
+\hr{Semiza}{\Semiza} had to 
+\hr{Semiza designs Resphain}{help them design and create} their \resphain.
+
+The \resphain are \hr{Resphan technology}{much more creative}.
+
+
+
+
+
+\subsubsection{Space travel}
+The \banes{} have spaceships. 
+These are stolen from the \voyagers{} and tens of thousands of years old, if not millions. 
+
+\Bane{} space travel is slow, partially because the \banes{} do not wholly understand the technology (including the navigational magic) and partially because the ships are old and damaged and the \banes{} can't repair them. 
+
+
+
+
+
+
+
+
+
 \subsection{History}
 \target{Bane history}
 
@@ -77,8 +168,101 @@ They have cruelly exploited their homeworld until \Erebos{} is now a dying husk,
 
 
 
-\subsubsection{Origin}
-The \banes{} were \hr{Banes are created}{created by the \voyagers}. 
+\subsubsection{World-God}
+\target{World-God of Erebos}
+\target{Voyagers slay the World-God of Erebos}
+\Erebos was originally a \hs{World-God}, like \Miith.
+Also \hr{Voyagers slay the World-God of Miith}{like \Miith}, the \voyagers invaded and eventually slew the World-God of \Erebos.
+They chained the World-God's Dark Heart and created their own \dweomer on top of it.
+
+
+
+
+
+\subsubsection{Origin of the \banes}
+\target{Banes are created}
+\target{Cosmic god creating the Banes}
+\target{Cosmic god creates Banes}
+\target{Evil Cosmic God creates Banes}
+The Dark Heart of \Erebos rebelled against the invading \voyagers.
+It took some of the \voyagers captive and corrupted them (like how Melkor created the Orcs in \cite{JRRTolkien:Silmarillion}. 
+The World-God twisted took these creatures' love and creativity and twisted them for its own purposes.
+They became the \banes. 
+The undead World-God instilled the \banes with a neverending hatred against the \voyagers and all their creations. 
+The World-God desired to destroy the \psp{\voyagers} civilization and corrupt their beloved children into a parasitic, nightmarish scourge to ravage the universe, destroying all in their path and leaving only Entropy behind. 
+
+\target{Banes as an antibody}
+In order to create this massive hatred, the World-God drew upon a vast cosmic principle, namely that of \hs{cannibalism}, the universal urge to betray, destroy and devour one's own kin, creator or parent. 
+As such, the \banes{} are a physical manifestation of a cosmic force of destruction and devourment. 
+In a sense, the \banes are a cosmic disease\ldots{} or cosmic antibodies, fighting against the infestation that is life.
+
+Compare them to the Zerg Overmind from the game \cite{VideoGame:Starcraft}. 
+
+\textbf{Note:} 
+This was not a singular event that only happened because \Erebos was particularly nasty.
+This is a necessary event that would have happened everywhere.
+The \voyagers were doomed to decay into monstrosities. 
+The \banes are what the \voyagers inevitably had to evolve into if the \voyagers were to continue their progress. 
+This is a necessary consequence of the nature of the \hr{Necrocosmos}.
+Later the \hr{Tiamat's hivemind is like the Banes}{same would happen to \Miith with \Tiamat's hivemind}.
+
+\lyricsbalsagoth{The Sixth Adulation of His Chthonic Majesty}{
+  I now know that there is something inestimably evil at large throughout the cosmos.\\
+  It is a ravenous and pitiless storm which rages across the universe, permeating the very fabric of creation, existing simultaneously in all dimensions, wholly unconstrained by linear time.\\
+  This force is the black, quasi-sentient mana which sustains such ageless revenants of the Z'xulth as the dread Dwellers in Eternal Shadow and the unspeakable They-Who-Lurk-And-Breed-In-Limbo.\\
+  When beings whose essences are intrinsically malefic choose to embrace this darksome energy source, the resultant sinister symbiosis can be sublimely diabolical, as evidenced by the black blight that was the infamous pseudo-human sorcerer Lord Angsaar!
+}
+
+
+
+
+
+\subsubsection{Reconquest of \Erebos}
+\target{Banes destroy Voyagers}
+The \banes ultimately destroyed the \voyagers.
+
+Then they waged wars of genocide and destroyed almost all life on \Erebos. 
+Thus they destroyed the \voyagers' \dweomer and freed the Dark Heart of \Erebos. 
+Alas, the Dark Heart had been irreversibly marred and could not be restored to what it was.
+It had been afflicted with an incurable disease. 
+
+This disease manifested itself as the \hr{Umbra}{\umbrae} and their spawn, the \hs{Nether Ones}.
+They arose and began to pray on the \banes.
+They could never destroy the \umbrae, for they were part of the World-God itself, born of its inner rot. 
+
+\Erebos{} was not always a Realm of darkness. 
+Once it had a sun that shone as brightly as any other. 
+But now, with the \voyagers' \dweomer extinguished and only the rotting Dark Heart remaining, their sun had turned black and all life had gone out of \Erebos.
+It was a dying husk.
+\Erebos{} and the \banes{} were doomed to decay and extinction. 
+
+Thus the World-God sent its \banes out in the universe.
+It wanted to conquer a new world where its spawn could live on.
+So the \banes{} were searching for a new planet to leech from, so that they may survive and grow in power. 
+(See also section \ref{Fighting for survival}.)
+
+
+
+
+
+\subsubsection{\Banes deplete the Heart of \Erebos}
+\Erebos{} was not always a Realm of darkness. 
+Once it had a sun that shone as brightly as any other. 
+But for tens of thousands of years the \banes{} have sucked the life out of their \hr{Dweomer}{\dweomer}, the \hr{Heart of Erebos}{Heart of \Erebos}. 
+And now their sun has turned black. 
+
+
+
+
+
+\subsubsection{\Banes hunted by \umbrae}
+\target{Banes and Umbrae}
+The \umbrae were \hs{incarnations of death and horror}, and even the \banes feared them. 
+This was the reason why the \banes wanted to invade \Miith so badly:
+Their homeworld of \Erebos was slowly being devoured and laid waste by the \umbrae.
+The \umbrae hunted the \banes, so the \banes had to flee their planet. 
+
+Compare the \umbrae to the Dholes/Bholes from the Cthulhu Mythos, in how they burrow into a planet and destroy it from within.
 
 
 
@@ -184,6 +368,37 @@ The \dragons originally had \hr{Draconic names for Banes}{other names for the \b
 It means approximately \quo{those from the ouside} in the \Resphan tongue 
 
 \emph{\SitraAchra} is Hebrew for \quo{external forces}, \quo{other side}, \quo{side of evil}. 
+
+
+
+
+
+
+
+
+
+\subsection{Personality}
+
+
+
+
+
+\subsubsection{Hivemind}
+The \banes had a hivemind. 
+The overmind was the \baneking \Voidbringer.
+There was only one \baneking. 
+
+
+
+
+
+\subsubsection{We}
+\Banelords, when talking, will always say \quo{we} instead of \quo{I}. 
+This reflects their communal nature. 
+\Banelords{} have little individualism and think about the collective instead. 
+
+The only times they use \quo{I} is when referring specifically to the individual \banelord, usually for some physical purpose 
+(as in \quo{I am not strong enough to counter this \dragon\ldots{}}). 
 
 
 
@@ -501,106 +716,6 @@ This is due to their tactile senses, which render them very sensitive to touch-b
 
 
 
-
-\subsection{Biology}
-
-
-
-
-
-\subsubsection{Entropy and True Death}
-\index{Entropy}
-\target{Entropy}
-\target{Bane parasitism}
-The \banes{} are a force of Entropy. 
-This is a major theme. 
-The \banes{} are inherently destructive and parasitic. 
-They can sustain themselves and grow stronger only by feeding upon their own kind. 
-
-This means that the \banes{} are doomed to stagnation and decline. 
-
-The \banes{} are creatures of the cold, darkness and emptiness. 
-They steal, absorb and swallow everything. 
-This is unlike the \dragons, who \hr{Dragons radiate life}{radiate life and light alike}. 
-
-\hr{Daggerrain}{\Daggerrain} and his master, the \hr{Voidbringer}{\Voidbringer}, understand this. 
-They seek to improve their race and let the \bane{} people evolve, to achieve perfection. 
-To do this, they must look outwards and find new sources of life, new cosmic \dweomers{} to drain, new power with which to infuse their race. 
-
-This is why they have set their eyes on \Miith{}. 
-\Miith{} has the \hr{Heart}{Heart of \Miith}, a powerful \dweomer{}, ultimately based on Chaos. 
-Drawing on the life-giving power of the Heart, and working together with \hr{Semiza}{\ps{\Semiza}} sorcerers, \hr{Semiza designs Resphain}{they were able to create} the \hr{Resphan}{\resphain}, who were intended as the new generation of \banes, empowered with the creative force of the Chaotic Heart. 
-The \hr{Satharioth}{\satharioth} took this a step forward and stole the Chaotic \xzaishannic{} power from the \dragons, making themselves even greater. They see themselves as the future of the \bane{} race, the heirs of the \bane{} legacy.
-
-According to some myths, the \banes were \hr{Banes are True Death}{agents of the forces of True Death}.
-
-
-
-
-
-\subsubsection{Life cycle}
-\index{cannibalism!\banes}
-\target{Bane cannibalism}
-The \banes are cannibalistic. 
-There are several tiers of them, from the lowly \banespawn{} through \lesserbanes{} to \banelords. 
-\Banes{} can rise in the ranks only by devouring the souls of other creatures, including (mandatorily!) other \banes. 
-New \banespawn{} are created by sacrificing a \lesserbane{} or a \banelord. 
-
-
-
-
-
-
-
-\subsubsection{Sex}
-\hr{Daggerrain}{\Daggerrain}{} believes that one way to escape the Entropy that afflicts the \bane{} race is by adopting and mastering the art of sex. See, sexual reproduction is a method that utilizes Chaos (random selection of genes, random mutations) to improve life, taking the best of what exists and adding potential improvements. As such, it is superior to the \ps{\banes}{} method of asexual reproduction, where they can create only clones that need to feed on their own kind in order to grow. 
-
-The \hr{Heart}{Heart of \Miith} is inherently tied to life, sex and reproduction. Sex is an inherently chaotic force/phenomenon. The \banes{} intend to harness sex and use it to evolve themselves towards perfection. 
-
-\Daggerrain{} sees the \hr{Resphan}{\resphain} as the way to go, but \humans{} are useful guinea pigs. 
-
-The \banes{} and \resphain{} conduct all sorts of sexual experiments. Those overseen by the \banelords{} are well-thought-through and for the benefit of their science. Those conducted by the \resphain{} and \resviel{} are often just depraved pleasure disguised as science. 
-
-Remember to have evil, wicked, sadistic sex-experiments! 
-
-
-
-
-
-
-
-
-
-\subsection{Personality}
-
-
-
-
-
-\subsubsection{Hivemind}
-The \banes had a hivemind. 
-The overmind was the \baneking \Voidbringer.
-There was only one \baneking. 
-
-
-
-
-
-\subsubsection{We}
-\Banelords, when talking, will always say \quo{we} instead of \quo{I}. 
-This reflects their communal nature. 
-\Banelords{} have little individualism and think about the collective instead. 
-
-The only times they use \quo{I} is when referring specifically to the individual \banelord, usually for some physical purpose 
-(as in \quo{I am not strong enough to counter this \dragon\ldots{}}). 
-
-
-
-
-
-
-
-
 \subsection{Politics}
 
 
@@ -609,50 +724,6 @@ The only times they use \quo{I} is when referring specifically to the individual
 
 \subsubsection{\Umbrae}
 See the section about \hr{Banes and Umbrae}{\banes and \umbrae}. 
-
-
-
-
-
-
-
-
-
-\subsection{Equipment}
-
-
-
-
-
-\subsubsection{Bane technology}
-\target{Bane technology}
-\index{technology!\bane}
-The \banes{} command large reserves of spaceships and other technological artifacts salvaged from the \voyagers{} on \Erebos, and perhaps also other cultures whom the \banes{} have conquered. These were remnants of the \hr{High-tech civilization}{interstellar civilization that once existed}.
-
-During the \hr{FBW}{\firstbanewar}, an important edge that the \banes{} had over the \Miithians was their superior technology. 
-%They commanded reserves of technological artifacts salvaged from the \voyagers{} on \Erebos, and perhaps also other cultures whom the \banes{} had conquered. 
-
-%, since the \banes{} themselves were afflicted with stagnation and had great difficulty creating truly new things. 
-
-
-The \banes{} do not understand the technology. They are unable to create new things, or even replicate existing ones, and are hard pressed to just repair and maintain what they have. 
-This is partly because the \voyagers{} were infinitely more advanced than their \bane{} spawn, and partly due to their being \hr{Entropy}{a force of Entropy, afflicted with stagnation and decay}. 
-After all, 
-\hr{Semiza}{\Semiza} had to 
-\hr{Semiza designs Resphain}{help them design and create} their 
-\hr{Resphan}{\resphain}{}.
-
-The \hr{Resphan}{\resphain}{} are \hr{Resphan technology}{much more creative}.
-
-
-
-
-
-\subsubsection{Space travel}
-The \banes{} have spaceships. 
-These are stolen from the \voyagers{} and tens of thousands of years old, if not millions. 
-
-\Bane{} space travel is slow, partially because the \banes{} do not wholly understand the technology (including the navigational magic) and partially because the ships are old and damaged and the \banes{} can't repair them. 
 
 
 
