--- a/World/OphidianRaces.tex
+++ b/World/OphidianRaces.tex
@@ -208,6 +208,8 @@ The first \dragons were born as \ophidians and later in life morphed into \drago
 But in later ages of the world the technology to turn \ophidians into \dragons was lost.
 Now new \dragons could only hatch from \dragon eggs.
 
+See the section on \hr{Becoming a Dragon}{becoming a \dragon}.
+
 
 
 
@@ -778,7 +780,7 @@ Only rarely has any \dragon been powerful and influential enough to command armi
 
 
 
-\subsubsection{Metaphysical nature}
+\subsubsection{Metaphysical nature and feel}
 \target{Dragons radiate life}
 The \dragons{} are a force of Chaos: Destruction and creation alike. 
 They are associated with light, fire, storm and lightning. 
@@ -786,6 +788,8 @@ They radiate life, energy and passion, but also fury and destructiveness.
 Like \hs{Nature}. 
 
 This is in contrast to the \banes{} and \resphain, who are \hr{Bane parasitism}{dark and parasitic}. 
+
+When mortals (or \resphain) look into the eyes of the great dragons they stare into the depths of unutterable cosmic evil, the blackest, most monstrous and alien abomination. 
 
 
 
@@ -1047,7 +1051,7 @@ It might have little power (at least in \Miith and in familiar Realms), but it c
 This was no guarantee, however. 
 It depended on the spiritual mastery of the individual \dragon (in accordance with \hr{Sethican philosophy}{\Sethican philosophy}). 
 
-For example, \Sethicus \hr{Sethicus becomes a god}{lived on and became a disembodied god} after his death. 
+For example, \Sethicus \hr{Sethicus in the Threnody}{lived on in the Threnody} after his death. 
 \Nexagglachel \hr{Nexagglachel lives on in Satharioth}{lived on inside the \satharioth}. 
 
 Similarly, the \hr{Aloof Dragons}{\dragons dormant in Durance} were dead and entombed and could not rise on their own, but needed to be resurrected by external forces. 
@@ -1091,6 +1095,7 @@ But if the \resphain are \hr{Umbra power}{mounted on \umbrae} then it only takes
 
 
 \subsection{Becoming a \dragon}
+\target{Becoming a Dragon}
 \target{Shaeeroth ritual}
 The \dragons{} were not born \dragons. 
 \Ophidians became \dragons{} by imbibing \xsic{} \quo{blood} in a magical ritual. 
@@ -1161,6 +1166,15 @@ Your ego and fears and wishes have to be broken down in order to be built up int
   Fill me with their whisperings\\
   And the shadows reveal their wisdom
 }
+
+
+
+
+
+\subsubsection{Price}
+The early \dragons were fairly easy to create, back when \hr{Sethicus}{\Sethicus} was alive. 
+Without \Sethicus and his gnosis it was much harder to create new \dragons.
+Now they could only be created through terrible sacrifice and death and suffering. 
 
 
 
@@ -1864,6 +1878,30 @@ Hence they conveyed a snake-like impression to other creatures, and hence the na
 
 
 
+\subsubsection{Basals, paracletes and hierarchs}
+\target{Basal}
+\target{Paraclete}
+\target{Hierarch}
+\index{basal}%
+\index{paraclete}%
+\index{hierarch}%
+The \caisith had the unusual ability to share psychic energy. 
+A band, tribe or nation of \caisith could pool their energy and form a \nexus. 
+Some individuals would then take on the role of leaders (\apexes) and direct the energy as mages, while the rest supported the leaders by feeding them energy. 
+Gradually a caste-like system emerged where different individuals were, from birth, better suited to one role than the other. 
+The \apexes became nobles and the vassals became commoners. 
+
+The lowest tier of \caisith were called \emph{basals}.
+The second tier were called \emph{paracletes} and the upper tiers were called \emph{hierarchs}. 
+(There could be multiple tiers of hierarchs above each another\dash e.g. a king supported by lords supported by knights.)
+
+As a rough guideline, each \caisith liege needed 4-5 vassals in order to be effective.
+So the population was made up of about 80\% basals, 16\% paracletes and 4\% hierarchs. 
+
+
+
+
+
 \subsubsection{Dreadnoughts}
 \target{Dreadnought}
 \target{Dreadnoughts}
@@ -1873,6 +1911,23 @@ They were used in the \caisiths's great wars.
 Later they were \hr{Dragons use Dreadnoughts}{used by the \dragons}. 
 
 To create these creatures, the \ophidians{} took inspiration (and at times actual genes) from various fierce creatures, including \nycans, \corgoroth{} and \vreiiden{} (many of which had themselves originally been designed and shaped by \ophidians). 
+
+
+
+
+
+\subsubsection{Epitomes}
+\target{Epitome}
+\target{Epitomes}
+\index{epitome}%
+The \emph{epitomes} were the gods of the \caisith.
+Each epitome was a non-sentient entity within the Ouroboros \nexus\dash a giant \daemon. 
+The ignorant masses believed that the epitomes were sentient gods.
+The more learned knew that the epitomes were non-sentient entities that could be invoked. 
+
+Many epitomes were originally based on a living \caisith. 
+These heroes were idolized in their lifetime, becoming powerful \hr{Hierarch}{hierarchs}. 
+After death they were still idolized, and all this psychic energy flowing from \hr{Basal}{basals} and \hr{Paraclete}{paracletes} coalesced in the spiritual world and turned into great \daemons that could grant \quo{prayers} and effect magical \quo{miracles}. 
 
 
 
