--- a/World/ResphanRace.tex
+++ b/World/ResphanRace.tex
@@ -2948,16 +2948,20 @@ Even Ramiel did not learn this until late.
 
 \subsubsection{Religion}
 \target{Resphan religion}
-The \resphain had almost no religion.
-They did not form any formal religious beliefs because they feared to think about it.
-If they began to ponder the nature of the universe and the meaning of life, they would have to factor in their own nature, and thus their own origin.
-They knew their origin: They were engineered by the \banes.
-Try as they might, they could not escape that fact.
+Most \resphain believed in a good afterlife for \resphain and \humans alike.
+Many believed in the \hr{Iquinian}{\Iquinian religion}. 
 
-They revered the Lord of the \SitraAchra, but not much.
+A minority glimpsed the awful truth of their origin: 
+That they were engineered by the \banes.
+These tried their best to \emph{not} think about religion and spirituality. 
+If they began to ponder the nature of the universe and the meaning of life, they would have to factor in their own nature, and thus their own origin.
+
+Some wise ones become priests and try to soothe the masses with lies to sate their curiosity and keep them feeling safe and happy and sane. Like Dunsany pp. 587-588. 
+
+The wise ones revered the Lord of the \SitraAchra, but not much.
 Some few took to worshipping the \SitraAchras as gods, but most could not bring themselves to do that.
 They \hr{Resphain fear Banes}{feared the \banes} and did not like to talk or even think about them, for the \banes were horrible monstrosities.
-They served the \banelords in name, but in their everyday lives the \resphain would prefer to pretend the \banelords did not exist.
+Even those who served the \banelords would prefer to pretend the \banelords did not exist.
 They certainly had no desire to worship them.
 
 \target{Other Side}
@@ -4128,6 +4132,19 @@ The capital of \Tarcharos was \hr{Hyardes}{\Hyardes Hold}.
 
 
 \subsection{History}
+
+
+
+
+
+\subsubsection{Founding}
+It was founded by \hr{Rayne Tarcharos}{Rayne \Tarcharos}.
+
+
+
+
+
+\subsubsection{Destruction}
 \target{Resphain invoked Umbra gods}
 Finally the sorcerer-lords of \Tarcharos attempted to make pacts with, or even control, the fell \hr{Umbra}{\umbrae} of the deep. 
 In their folly they called upon \Norganthus and \Tzyaragoth, hoping to use their power against their enemies. 
