--- a/World/Universe.tex
+++ b/World/Universe.tex
@@ -1251,13 +1251,6 @@ But they did not want mortals using \itzach, because \itzach was volatile.
 They could control the mortals much better through \iquin. 
 So in \hs{Vaimon} metaphysics \itzach was reviled as the source of all evil. 
 
-% Originally, the \banes{} relied on magic that drew its power from \Erebos{}. 
-% But when \Miith{} and \Nyx{} was sealed off from \Erebos{} at the end of the First \Banewar, the \banes{} lost the source of the magical power and were left crippled, and the \dragons{} and their minions were easily able to slaughter the millions of \banes{} still on \Miith{}. 
-% Daggerrain and some other \banelords{} survived and were able to hide. 
-% Deprived of their magic, they had to develop a new magic theory. 
-% So they came up with \itzach{} theory, which is some principles from old \bane{} magic theory combined with some Chaos theory. 
-% So \itzach{} is a chaotic force, and the \Kliffoth{} are more or less the same as the \hr{Daemon}{\daemons} which Chaos magicians invoke. 
-
 But the \banes{} wanted a better tool to control their \humans{}. The problem was that if you taught \itzach{} magic to \humans{}, it tended to reinforce their chaotic nature and make them difficult to control. But without magic at all, the \humans{} were wimps. 
 And so they created \hr{Iquin}{\Iquin}. 
 
@@ -2911,7 +2904,424 @@ It is just very difficult.
 Examples: 
 \hr{Silqua dies}{\Eryal{} allowed herself to be eaten}. 
 \hr{Shiaraid dies}{So did \Shiaraid}. 
- 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section{Horror of the nature of the cosmos}
+See also the section about \hr{The dark universe}{the dark, sinister universe}. 
+
+
+
+
+
+
+
+
+
+\subsection{Death of the Universe}
+\target{Dead Universe}
+\target{dead universe}
+\target{True Life}
+\target{True Death}
+\target{False Life}
+\target{Necrocosmos}
+\index{dead universe}%
+\index{Necrocosmos}%
+\Sethicus believed that there was an Age of Life when the universe was once beautiful all over, shining bright with interconnected and happy life. 
+In those days everything was bright and warm and beautiful, full of stars and nebulae, not the cold and dark void that it later became. 
+All beings were blessed with True Life, and their lives were wonderful. 
+All creatures were unspeakably beautiful, numinous and luminous. 
+Angels.
+There was only joy, pleasure and happiness. 
+There was no anger, no fear and no pain. 
+Living creatures would merge, split apart and change form forever, for there was no death. 
+
+\target{Greatest Race}%
+\index{Greatest Race, the}%
+The great civilization at this time was that of the Numina, the Numinous Ones, the Greatest Race. 
+(It might have been the greatest of many civilizations, or it might have been one single civilization spanning the entire universe.)
+They ascended higher in learning, technology and wisdom than any race had done before. 
+
+Then a \quo{cancer} appeared. 
+It infected and destroyed the True Life. 
+From there, things went quickly downhill in a darwinian manner, because the True Life was not adapted to cope with the cancer's depredations. 
+
+\Sethicus did not understand how this happened, but he had some reason to believe that the angels went insane and committed suicide.
+He had seen visions of luminous creatures mutilating themselves and one another in the most hideous fashion. 
+Compare to the fictional film \emph{La Fin Absolue du Monde}, found in \cite{Movie:CigaretteBurns}.
+He believed that the Greatest Race realized the true nature of the universe, and it drove them insane. 
+It was horrible to see these beautiful creatures exterminate themselves. 
+It shook \Sethicus' sanity and made him suspect that all life and happiness had to end in horror and cannibalism and destruction. 
+
+The living universe died. 
+Since then it lay as a bleeding, rotting corpse. 
+All True Life had died long ago. 
+
+\citeauthorbook[p.16]{VengerSatanis:CthulhuCult}{Venger Satanis}{Cthulhu Cult}{
+  This entire illusion, our whole world, is a pale reflection of a hidden reality.
+  Corpulent, rotting dreams stretch out farther than infinity and are guided by a foul devotion\ldots{}
+  how can we accept a universe where entropy is the rule?
+}
+
+\index{Necrocosmos}
+Currently the universe lay in a state of False Death. 
+It was a dead universe, a \emph{Necrocosmos}.
+It was deprived of True Life, but it still twitched and bled and rotted. 
+This state of decay was False Death. 
+It was an interim stage on the way from True Life to True Death. 
+A more accurate term might perhaps be \quo{Incomplete Death}. 
+
+\Dweomers were really bleeding, festering wounds in this corpse, through which oozed the poor residues of life for vermin to feed upon. 
+They were manifestations of False Death. 
+
+\target{Horrors are False Death}
+Many of the \hr{Horrors of the Void}{horrors of the void} were likewise manifestations of rot and decay, of False Death. 
+
+\target{Voyagers are False Life}
+Living beings such as \Miithians were all False Life. 
+False Life could only exist because of False Death. 
+They were diseases, bacteria suckling on the wounds of a dead universe, living upon rot. 
+As such, their lives were short and full of suffering. 
+Even the \voyagers were False Life. 
+
+\target{Banes are True Death}
+Some cosmic gods were believed to be among those enemies who slew the universe. 
+They were agents of True Death. 
+The \banes, among others, were spawn of the forces of True Death.
+Their purpose was to destroy both False Life and the lingering vestiges of True Life and finally bring True Death to the entire universe and return everything to nothingness. 
+
+\target{XS are True Life}
+The \xss were some of the last sickly, twisted, degenerate, tattered remnants of True Life. 
+The \xss did not possess True Life, but they carried some vestige of its power.
+This was the source of their great sorcery. 
+This was why \Sethicus idolized and worshipped them. 
+They were cruel, brutal and destructive beings, but they possessed an inner core of passion and life which \Sethicus admired. 
+All existing \xss were many millions of years old, antediluvian survivors of the Age of Life. 
+No new \xss could ever be spawned\ldots{} unless \hr{Sethicus plan}{\Sethicus's plan} succeeded.
+
+There were also beings called the Screaming Gods. 
+These were the insane survivors of the Greatest Race\dash perhaps even greater and mightier than the \xss.
+Compare to Azathoth from the Cthulhu Mythos.
+
+
+
+
+
+\subsubsection{Outer ones}
+\Sethicus had journeyed with his mind far to the very edge of the universe.
+There, on the dim shores beyond space and chaos, he had beheld \textsc{them}\dash those who were once the first race, the luminous ones. 
+They are the brothers of \RuinSatha. 
+Each of them is like a universe unto itself. 
+They were once beautiful, but they have fallen from grace and become the essence of corruption.
+They are the blackest foulness, for only the purest light can become the purest darkness. 
+To touch them, to contact them, to even behold or know or conceive of them is to know madness and invite chaos and dissolution and death into the universe. 
+
+
+
+
+
+\subsubsection{Aeons and cycles}
+\Sethicus divided the universe' history into aeons. 
+According to his theory there had once been an Aeon of Life, and everyone was now living in an Aeon of Death. 
+
+\Sethicus had good reason to believe that there had been another Aeon of Death preceding the Aeon of Life.
+This might imply that death was the natural and original state of the universe. 
+A bleak prospect. 
+
+\Sethicus had another hypothesis which said that this had happened more than once: 
+Perhaps the universe underwent cycles, blossoming into an Aeon of Life and decaying into an Aeon of Death, only to blossom again into a new Aeon of Life. 
+\Sethicus liked this idea because it implied that hope was not lost and that True Life could come again.
+But in all his research he never managed to find any evidence supporting this hypothesis.
+He searched desperately for a way to convince himself that all was not lost, and this arguably drove him from sanity.
+
+
+
+
+
+\subsubsection{Imagery}
+\begin{prose}
+  Sethicus:
+  \ta{I have heard the weeping and wailing of the endless void.
+    Thinkest thou that the nothingness itself cannot suffer?
+    Thou knowest nothing.
+    Thou hast not seen what I have seen; the visions of a universe whose every fibre was once alive but now lies dead, trapped in an eternal hell.}
+\end{prose}
+
+\citebandsong{BlindGuardian:ATITM}{Blind Guardian}{This Will Never End}{
+  The vision's bleak and its colour's black.\\
+  Oh, far beyond there is a starving, dying sun.
+}
+
+\citeauthorbook[p.21]{HPLovecraft:TheAncientTrack}{%
+  \HPLovecraft%
+}{%
+  A Poe'et's Nightmare%
+}{%
+  Then flicker'd low the light, and all dissolv'd\\
+  Leaving me floating in the hellish grasp\\
+  Of body'd blackness, from whose beating wings\\
+  Came ghoulish blasts of charnel-scented mist.\\
+  things vague, unseen, unfashion'd, and unnam'd\\
+  Jostled each other in the seething void\\
+  That gap'd, chaotic, downward to a sea\\
+  Of speechless horror, foul with writhing thoughts.\\
+  All this I felt, and felt the mocking eyes\\
+  Of the curs's universe upon my soul;\\
+  Yet naught I saw nor heard, till flash'd a beam\\
+  Of lurid lustre through the rotting heav'ns,\\
+  Playing on scenes I labour'd not to see.\\
+  Methought the nameless tarn, alight at last,\\
+  Reflected shapes, and more reveal'd within\\
+  Those shocking depths that ne'er were seen before;\\
+  Methought from out the cave a demon train,\\
+  Grinning and smirking, reel'd in fiendish rout;\\
+  Bearing within their reeking paws a load\\
+  Of carrion viands for an impious feast.
+}
+
+\citeauthorbook[p.27]{HPLovecraft:TheAncientTrack}{%
+  \HPLovecraft%
+}{%
+  Nemesis%
+}{%
+  I have whirled with the earth at the dawning,\\
+  When the sky was a vaporous flame;\\
+  I have seen the dark universe yawning\\
+  Where the black planets roll without aim,\\
+  Where they roll in their horror unheeded, \\
+  without knowledge or lustre or name.
+}
+
+
+
+
+
+\lyricsauthorbookpage{Ben Counter}{Galaxy in Flames}{114-118}{
+  \ldots{} a vision of broken steppes spread out before Loken, expanses of desolation and plains of rusted machinery like skeletons of extinct monsters. 
+  A hive city on the distant horizon split open like a flower, and from its broken, burning portals rose a mighty tower of brass that punctures the pollution-heavy clouds. 
+  
+  The sky above was burning and the laughter of Dark Gods boomed from the heavens. 
+  
+  \ldots{}
+  
+  He wrenched his mind away from the dying world, and suddenly he was soaring through the galaxy, tumbling between the stars. 
+  He saw them destroyed, bleeding glowing plumes of stellar matter into the void. 
+  A baleful mass of red stars glowered above him, staring like a great and terrible eye of flame. 
+  An endless tide of titanic monsters and vast space fleets vomited from that eye, drowning the universe in a tide of blood. 
+  A sea of burning flames spat and leapt from the blood, consuming all in its path, leaving black, barren wasteland in its wake. 
+  
+  \ldots{}
+  
+  \emph{You are seeing the galaxy die.}
+  
+  \ldots{}
+  
+  Loken could see it where the flames burned through, the endless churning mass of the warp at the heart of everything and the eyes of dark forces seething with malevolence. 
+  \ldots{}
+  Bloated monsters, their bodies heaving with maggots and filth, devoured dead stars as a brass-clad giant bellowed an endless war cry from its throne of skulls and soulless magicians sacrificed billions in a silver city built of lies. 
+  
+  \ldots{}
+  
+  Sindermann had been right. 
+  Loken was hearing the music of the spheres, and it was a terrible sound that spoke of corruption, blood and the death of the universe. 
+}
+
+\Sethicus feared his visions. 
+They drove him half-mad. 
+
+\citeauthorbook[p.28]{HPLovecraft:TheAncientTrack}{%
+  \HPLovecraft%
+}{%
+  Nemesis%
+}{%
+  Oh, great was the sin of my spirit,\\
+    And great is the reach of its doom;\\
+  Not the pity of Heaven can cheer it,\\
+    Nor can respite be found in the tomb:\\
+  Down the infinite aeons come beating \\
+    the wings of unmerciful gloom.
+
+  Through the ghoul-guarded gateways of slumber,\\
+    Past the wan-mooned abysses of night,\\
+  I have lived o'er my lives without number,\\
+    I have sounded all things with my sight;\\
+  And I struggle and shriek ere the daybreak, \\
+    being driven to madness with fright.
+}
+
+
+
+
+
+
+
+
+
+\subsection{Knowledge is horrible}
+\target{Knowledge is horrible}
+It is inherently horrible and horrible to know the truth about the universe. 
+It is well known among the wise that reasoned learning and understand of the nature of the universe leads to madness, horror and despair\dash but also great power (for knowledge is power). 
+Yet all ambitious intelligent beings are driven to seek power and knowledge. 
+\hr{Addiction to knowledge}{Enlightenment is addictive}. 
+
+The way to happiness is to stop questioning and questing and accept your small lot. 
+To be meek. 
+But those who stay meek are often trampled by the ambitious. 
+
+
+
+
+
+\subsubsection{Addiction to knowledge}
+\target{Addiction to knowledge}
+Knowledge and enlightenment could be highly addictive. 
+\hr{Sethicus addicted to knowledge}{\Sethicus experienced this}. 
+
+Like Machen p. 75. 
+
+\citeauthorbook[pp.75--76]{ArthurMachen:TheInmostLight}{Arthur Machen}{The Inmost Light}{%
+  What are commonly called the pleasures of life had never had any attractions for me...
+  So long as I could gratify my desire of knowledge of a particular king, knowledge of which the very existence is a profound secret to most men, I was intensely happy, and I have often spent whole nights sitting in the darkness of my room, and thinking of the strange world on the brink of which I trod. 
+  ...
+  I had learnt enough of the paths I had begun to tread to know that they were beyond all expression difficult and dagerous, that to persevere meant in all probability the wreck of a life, and that they led to regions so terrible, that the mind of man shrinks appalled at the very thought. 
+  ... 
+  But suddenly... the old desire, the former longing, returned, and returned with a force that had been intensified ten times by its absence; and when the day dawned and I looked out of the window, and saw with haggard eyes the sunrise in the east, I knew that my doom had been pronounced; that as I had gone too far, so now I must go farther with unfaltering steps. 
+  ... each night I had stolen a step nearer to that great abyss which I was to bridge over, the gulf between the world of consciousness and the world of matter.
+  My experiments were many and complicated in their nature, and it was some months before I realized whither they all pointed, and when this was borne in upon me in a moment's time, I felt my face whiten and my heart still within me.
+  But the power to draw back, the power to stand before the doors that had now opened wide before me and not to enter in, had long ago been absent; the way was closed, and I could only pass onward.
+  My position was as utterly hopeless as that of the prisoner in an utter dungeon, whose only light is that of the dungeon above him; the doors were shut and escape was impossible. 
+  ...
+  In that work, from which even I doubted to escape with life, life itself must enter; from some human being there must be drawn that essence which men call the soul, and in its place (for in the scheme of the world there is no vacant chamger)\dash in its place would enter in what the lips can hardly utter, what the mind cannot conceive without a horror more awful than the horror of death itself.
+}
+
+
+
+
+
+\subsubsection{Corruption by knowledge}
+\target{Corruption by knowledge}
+Those who understand too much will be inexorably drawn towards changes in opinion that others often consider perverse and evil. 
+
+The ignorant tend to believe in morality and in a benign fate, gods and/or afterlife. The learned realize that morality is a lie, life and consciousness but illusions, and the afterlife (when it exists) worse than oblivion. The learned often become drawn to new ambitions (for pleasure or for a newfound and \quo{higher} cause) which seem criminal to others. The unenlightened cannot comprehend \quo{higher} causes and see only evil. 
+
+\target{Vril shokraan}
+\index{\emph{vril shokraan}}%
+\emph{Vril shokraan} is a \hr{Talaac}{Talaac} word for those whose minds, through knowledge and experience, have grown so alien and different as to be dangerously insane from the perspective of society. 
+Someone whose mind, thinking and values are alien and far removed from the standards of normal folk.
+
+
+
+
+
+
+
+
+
+
+\subsection{Mysticism}
+\target{Mysticism}
+\index{mysticism}%
+To avoid knowing too much \hr{Knowledge is horrible}{horrifying, maddening knowledge}, many mages turn to mysticism: 
+Trying to affect the universe without fully understanding the mechanisms of it. 
+This is less powerful, less precise and less reliable than rational magic, but safer for the mind. 
+
+
+
+
+
+
+
+
+
+\subsection{Threnody}
+\target{Threnody}
+\index{Threnody}%
+The Threnody was an ongoing telepathic transmission that alienist mages could learn to hear. 
+Those who studied the Umaja Tablets began to hear and understand the Threnody. 
+The Threnody tended to drive insane any who listened to it enough. 
+
+That was why the \hr{Umaja}{Umaja Tablets} were dangerous. 
+The Tablets themselves were not so bad, but they taught you to understand the Threnody, and that destroyed you.
+
+
+
+
+
+\subsubsection{\Sethicus in the Threnody}
+After the death of \Sethicus, the Threnody became clearer, louder and easier for \Miithians to hear\dash as if they suddenly resonated and empathized more with it; as if the voices were suddenly more familiar and less alien (but still equally horrifying). 
+This was because \hr{Sethicus in the Threnody}{\Sethicus had become a new voice in the choir of the Threnody}.
+
+\hr{Iscrafel learns that Sethicus is in the Threnody}{\Iscrafel was horrified to discover this.}
+
+
+
+
+
+
+
+
+
+
+\subsection{The \UmajaTablets}
+\target{Umaja}
+\index{\UmajaTablets}
+The true living beings (the \hs{Greatest Race}) stored their knowledge in a comsic repository, woven into the very background fabric of the universe itself.
+This was called the \UmajaTablets, although the \quo{tablets} were purely metaphorical.
+Here were recorded their mighty secrets.
+
+But the tablets also showed the creatures' descent into madness and how they eventually destroyed their own civilization and slew the universe. 
+The later sections of the tablets are full of this madness, and by following the tablets in order one gain some insight into how this madness came about. 
+It is horrifying to learn, for to understand this madness is to be afflicted by it.
+Indeed, madness is a necessary consequence of wisdom. 
+
+Thus the \UmajaTablets were \quo{tainted} with madness. 
+\Sethicus dared not read much in the tablets, because he knew it was hurting his sanity. 
+Even he dared not pay so high a price for knowledge. 
+
+\target{Umaja supermind}
+Umaja was originally the shared supermind of the Greatest Race. 
+Their \nexus. 
+\hs{Ramarxes} would use it as inspiration for his \hs{Concord}. 
+
+The knowledge of how to access the \UmajaTablets still existed in later ages. 
+Some sorcerers used them and gleaned much sorcerous knowledge from the tablets.
+There was much power to be found there, but it came with a terrible risk.
+Moreover, reading the tablets was addictive, because they were so fascinating and wondrous and fantastic. 
+Once you began reading them, it was hard to resist the temptation to read on.
+This led quickly to madness. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section{Pantheism}
+All mind, matter and space are connected. 
+In a sense the universe is one big living, sentient organism. 
+When the \hr{Greatest Race} discovered the \hr{Knowledge is horrible}{terrifying truth}, the knowledge drove the universe itself mad (creating the \hr{Necrocosmos}). 
+
+This connection between mind, body and space is why it is possible to see into a different layer of reality and suddenly move there. This connection is also the basis for all life and magic. 
 
 
 
