--- a/World/Realms.tex
+++ b/World/Realms.tex
@@ -126,99 +126,7 @@ In the mystic gloom of the deep abyss, you can sometimes hear the writhing of th
 
 
 \subsection{History}
-See also the section on the \hr{Bane history}{history of the \banes}. 
-
-
-
-
-
-\subsubsection{World-God}
-\target{World-God of Erebos}
-\target{Voyagers slay the World-God of Erebos}
-\Erebos was originally a \hs{World-God}, like \Miith.
-Also \hr{Voyagers slay the World-God of Miith}{like \Miith}, the \voyagers invaded and eventually slew the World-God of \Erebos.
-They chained the World-God's Dark Heart and created their own \dweomer on top of it.
-
-
-
-
-
-\subsubsection{Origin of the \banes}
-\target{Banes are created}
-\target{Cosmic god creating the Banes}
-\target{Cosmic god creates Banes}
-\target{Evil Cosmic God creates Banes}
-The Dark Heart of \Erebos rebelled against the invading \voyagers.
-It took some of the \voyagers' creations, in whom the \voyagers{} had invested all of their love and creativity.
-The World-God took these creatures and twisted them for its own purposes.
-They became the \banes. 
-The undead World-God instilled the \banes with a neverending hatred against the \voyagers and all their creations. 
-The World-God desired to destroy the \psp{\voyagers} civilization and corrupt their beloved children into a parasitic, nightmarish scourge to ravage the universe, destroying all in their path and leaving only Entropy behind. 
-
-\target{Banes as an antibody}
-In order to create this massive hatred, the World-God drew upon a vast cosmic principle, namely that of \hs{cannibalism}, the universal urge to betray, destroy and devour one's own kin, creator or parent. 
-As such, the \banes{} are a physical manifestation of a cosmic force of destruction and devourment. 
-In a sense, the \banes are a cosmic disease\ldots{} or cosmic antibodies, fighting against the infestatation that is life.
-
-Compare them to the Zerg Overmind from the game \cite{VideoGame:Starcraft}. 
-
-\lyricsbalsagoth{The Sixth Adulation of His Chthonic Majesty}{
-  I now know that there is something inestimably evil at large throughout the cosmos.\\
-  It is a ravenous and pitiless storm which rages across the universe, permeating the very fabric of creation, existing simultaneously in all dimensions, wholly unconstrained by linear time.\\
-  This force is the black, quasi-sentient mana which sustains such ageless revenants of the Z'xulth as the dread Dwellers in Eternal Shadow and the unspeakable They-Who-Lurk-And-Breed-In-Limbo.\\
-  When beings whose essences are intrinsically malefic choose to embrace this darksome energy source, the resultant sinister symbiosis can be sublimely diabolical, as evidenced by the black blight that was the infamous pseudo-human sorcerer Lord Angsaar!
-}
-
-
-
-
-
-\subsubsection{Reconquest of \Erebos}
-\target{Banes destroy Voyagers}
-The \banes ultimately destroyed the \voyagers.
-
-Then they waged wars of genocide and destroyed almost all life on \Erebos. 
-Thus they destroyed the \voyagers' \dweomer and freed the Dark Heart of \Erebos. 
-Alas, the Dark Heart had been irreversibly marred and could not be restored to what it was.
-It had been afflicted with an incurable disease. 
-
-This disease manifested itself as the \hr{Umbra}{\umbrae} and their spawn, the \hs{Nether Ones}.
-They arose and began to pray on the \banes.
-They could never destroy the \umbrae, for they were part of the World-God itself, born of its inner rot. 
-
-\Erebos{} was not always a Realm of darkness. 
-Once it had a sun that shone as brightly as any other. 
-But now, with the \voyagers' \dweomer extinguished and only the rotting Dark Heart remaining, their sun had turned black and all life had gone out of \Erebos.
-It was a dying husk.
-\Erebos{} and the \banes{} were doomed to decay and extinction. 
-
-Thus the World-God sent its \banes out in the universe.
-It wanted to conquer a new world where its spawn could live on.
-So the \banes{} were searching for a new planet to leech from, so that they may survive and grow in power. 
-(See also section \ref{Fighting for survival}.)
-
-
-
-
-
-\subsubsection{\Banes deplete the Heart of \Erebos}
-\Erebos{} was not always a Realm of darkness. 
-Once it had a sun that shone as brightly as any other. 
-But for tens of thousands of years the \banes{} have sucked the life out of their \hr{Dweomer}{\dweomer}, the \hr{Heart of Erebos}{Heart of \Erebos}. 
-And now their sun has turned black. 
-
-
-
-
-
-\subsubsection{\Banes hunted by \umbrae}
-\target{Banes and Umbrae}
-The \umbrae were \hs{incarnations of death and horror}, and even the \banes feared them. 
-This was the reason why the \banes wanted to invade \Miith so badly:
-Their homeworld of \Erebos was slowly being devoured and laid waste by the \umbrae.
-The \umbrae hunted the \banes, so the \banes had to flee their planet. 
-
-Compare the \umbrae to the Dholes/Bholes from the Cthulhu Mythos, in how they burrow into a planet and destroy it from within.
+See the section on the \hr{Bane history}{history of the \banes}. 
 
 
 
